# python-task-manager

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml  requirements.txt
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.po
task_manager/: access_mixins.py  rollbar_middleware.py  settings.py  urls.py  view_mixins.py  views.py
task_manager/templates/: footer.html  header.html  index.html  layout.html  login.html
task_manager/templates/users/: create.html  delete.html  index.html  update.html
task_manager/users/: forms.py  mixins.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
task_manager/users/templates/users/: create.html  delete.html  index.html  update.html
